Particlesの下のCourses(クラス)をabsoluteにすることで解決しました、子要素問題には勝ててません

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <div id="particles">
             <h2>Courses</h2>
             <div class="Courses">
-                <div class="box" id="HTML">
+               <div class="upperbox">
+                   <div class="box" id="HTML">
                     <img src="/images/html.png" alt="">
                     <h5>HTMLコース</h5>
                     <a href="#Courses" id="coursebutton">このコースを受ける</a>
@@ -79,7 +80,9 @@
                     <h5>Rubyコース</h5>
                     <a href="#Courses" id="coursebutton">このコースを受ける</a>
                 </div>
-                <div class="box" id="JavaScript">
+               </div>
+               <div class="bottombox">
+                   <div class="box" id="JavaScript">
                     <img src="/images/js.png" alt="">
                     <h5>JavaScriptコース</h5>
                     <a href="#Courses" id="coursebutton">このコースを受ける</a>
@@ -94,6 +97,8 @@
                     <h5>Goコース</h5>
                     <a href="#Courses" id="coursebutton">このコースを受ける</a>
                 </div>
+               </div>
+                
             </div>
         </div>
     </div>
