--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-    <div id="Courses  fuwat">
+    <div class="fuwat" id="Courses">
         <div id="particles"></div>
         <div class="contents">
             <h2>Courses</h2>
