--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!--        <script src="./js/jquery.bxslider.min.js"></script>-->
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+<!--    <link rel="stylesheet" href="f">-->
 
-    <!--    <link rel="stylesheet" href="jquery.bxslider.min.css">-->
     <link rel="stylesheet" href="style.css">
-    <title>Happy Hack</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Happy Hack</title>
+    
 </head>
 
 <body>
@@ -26,14 +27,14 @@
             </ul>
         </nav>
         <div class="logo">
-            <img src="/images/logo.png" alt="" width=900px>
+            <img src="/images/logo.png" alt="">
             <h1>We are Web Designers.</h1>
         </div>
     </header>
 
     <!--    サイトの中身部分　　　-->
 
-    <div class="Introduction fuwat" id="Introduction">
+    <section class="Introduction fuwat" id="Introduction">
         <h2>Introduction</h2>
 
         <div class="rightbox">
@@ -55,9 +56,9 @@
             </div>
             <img src="/images/introduction_002.jpg" alt="">
         </div>
-    </div>
+    </section>
 
-    <div class="fuwat" id="Courses">
+    <section class="fuwat" id="Courses">
         <div id="particles"></div>
         <div class="contents">
             <h2>Courses</h2>
@@ -103,9 +104,9 @@
             </div>
 
         </div>
-    </div>
+    </section>
 
-    <div class="Images fuwat" id="Images">
+    <section class="Images fuwat" id="Images">
         <h2>Images</h2>
         <div class="slider">
             <div><img src="images/hero.jpg" alt=""></div>
@@ -114,25 +115,24 @@
             <div><img src="images/background4.jpg" alt=""></div>
             <div><img src="images/background5.jpg" alt=""></div>
         </div>
-    </div>
-    <!--
+    </section>
     <script>
-        $(document).ready(function() {
-            $('.slider').bxSlider({
-                arrows: true,
-                slidesToShow: 4,
-                slidesToScroll: 1,
-                controls: false
-            });
-        });
-    </script>
--->
+$(document).ready(function() {
+　$('.slider').bxSlider({
+                mode:'horizontal',
+                slideWidth: 210,
+                moveSlides: 1,
+                maxSlides: 4,
+　 });
+ });
+</script>
 
-    <div class="Access fuwat" id="Access">
+    
+    <section class="Access fuwat" id="Access">
         <h2>Access</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6560.6262797845075!2d135.492449!3d34.697281!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9fec1659611f776f!2zTGlmZSBpcyBUZWNoISDlpKfpmKrjgqrjg5XjgqPjgrk!5e0!3m2!1sja!2sjp!4v1601172326353!5m2!1sja!2sjp" width="600" height="400" frameborder="0" style="border:0; " allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
-    </div>
+    </section>
 
 
     <!--   footer   -->
